added bubble sort

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header-right">
       <a>
         <div class="value">32</div>
-        <input type="range" min="32" max="512" step="1" value="32">
+        <input type="range" min="32" max="256" step="1" value="32">
       </a>
       <a class="clickable" onclick="bubblesort()">Bubble Sort</a>
       <a class="clickable" onclick="bubblesort()">Quick Sort</a>
@@ -26,8 +26,7 @@
     </div>
   </div>
 
-  <canvas id="canvas"></canvas>
-
+  <script src="p5.min.js"></script>
   <script src="canvas.js"></script>
   <script src="slider.js"></script>
   <script src="algorithms/bubblesort.js"></script>
