added 2 more algorithms

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <a class="clickable" onclick="quickSort()">Quick Sort</a>
       <a class="clickable" onclick="heapSort()">Heap Sort</a>
       <a class="clickable" onclick="selectionSort()">Selection Sort</a>
+      <a class="clickable" onclick="gnomeSort()">Gnome Sort</a>
+      <a class="clickable" onclick="insertionSort()">Insertion Sort</a>
     </div>
   </div>
   
@@ -34,5 +36,7 @@
   <script src="algorithms/quickSort.js"></script>
   <script src="algorithms/heapSort.js"></script>
   <script src="algorithms/selectionSort.js"></script>
+  <script src="algorithms/gnomeSort.js"></script>
+  <script src="algorithms/insertionSort.js"></script>
 </body>
 </html>
