--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           <li>
             <a>
               <div class="delay">50</div>
-              <input type="range" min="1" max="1000" step="10" value="50">
+              <input type="range" min="0" max="1000" step="10" value="50">
               <div style="text-align: center;">Delay</div>
             </a>
           </li>
           <li>
             <a>
               <div class="value">32</div>
-              <input type="range" min="32" max="512" step="1" value="32">
+              <input type="range" min="32" max="1024" step="1" value="32">
               <div style="text-align: center;">Size</div>
             </a>
           </li>
@@ -45,34 +45,12 @@
           <li><a class="clickable" onclick="gnomeSort()">Gnome Sort</a></li>
           <li><a class="clickable" onclick="insertionSort()">Insertion Sort</a></li>
         </ul>
-      </header><!--
-  <div class="header">
-    <a class="logo" href="https://starbuckr.github.io/VisualSorting/">Visual Sorting</a>
-    <div class="header-right">
-      <a class="clickable" onclick="resetEverything()">Reset Everything</a>
-      <a>
-        <div style="color:#FF4136; font-size: 15px">Selection Color</div>
-        <div style="color:#0074D9; font-size: 15px">Partition Color</div>
-      </a>
-      <a>
-        <div class="delay">50</div>
-        <input type="range" min="1" max="1000" step="10" value="50">
-        <div>Delay</div>
-      </a>
-      <a>
-        <div class="value">32</div>
-        <input type="range" min="32" max="512" step="1" value="32">
-        <div>Size</div>
-      </a>
-      <a class="clickable" onclick="bubbleSort()">Bubble Sort</a>
-      <a class="clickable" onclick="quickSort()">Quick Sort</a>
-      <a class="clickable" onclick="heapSort()">Heap Sort</a>
-      <a class="clickable" onclick="selectionSort()">Selection Sort</a>
-      <a class="clickable" onclick="gnomeSort()">Gnome Sort</a>
-      <a class="clickable" onclick="insertionSort()">Insertion Sort</a>
-    </div>
-  </div>-->
-  
+      </header>
+
+  <div class="counter">Second Counter : <span id="compCounter">0</span></div>
+  <div class="counter">Comparison Counter: <span id="comparison">0</span></div>
+  <div class="counter">Swap Counter: <span id="arrayComparison">0</span></div>
+
   <script src="assets/p5.min.js"></script>
   <script src="assets/canvas.js"></script>
   <script src="assets/slider.js"></script>
