made responsive and menu fixes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="container">
   
                     <div class="range-slider">
-                      <span id="rs-bullet2" class="rs-label">0</span>
+                      <span id="rs-bullet2" class="rs-label">32</span>
                       <input id="rs-range-line2" class="rs-range" type="range" value="32" min="32" max="1024">
                       
                     </div>
@@ -73,12 +73,6 @@
           <li>
               <a class="clickable" onclick="randomOrder()">Random Order</a>
           </li>
-          <li>
-            <a>
-              <div style="color:#FF4136; font-size: 15px">Selection Color</div>
-              <div style="color:#0074D9; font-size: 15px">Partition Color</div>
-            </a>
-          </li>
           </div>
           </div>
         
@@ -88,7 +82,7 @@
             <li><a class="clickable" onclick="quickSort()">Quick Sort</a></li>
             <li><a class="clickable" onclick="selectionSort()">Selection Sort</a></li>
             <li><a class="clickable" onclick="bubbleSort()">Bubble Sort</a></li>
-            <!--<li><a class="clickable" onclick="heapSort()">Heap Sort</a></li>-->
+            <li><a class="clickable" onclick="heapSort()">Heap Sort</a></li>
             <li><a class="clickable" onclick="gnomeSort()">Gnome Sort</a></li>
             <li><a class="clickable" onclick="insertionSort()">Insertion Sort</a></li>
           </div>
